# mc-cli

./: .gitignore  Cargo.toml  README.md  notes.md  version_manifest.json
src/: main.rs  setup.rs
