[package]
name = "mc-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#azalea-auth = "0.8.0"
clap = { version = "4.4.8", features = ["derive"] }
inquire = "0.6.2"
interactive-clap = "0.2.7"
directories = "5"
log = "0.4.20"

